--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,16 @@ Flask==2.0.3
 aiohttp==3.8.1
 requests==2.27.1
 cachetools==5.0.0
-nest_asyncio==1.5.5
+pandas==1.3.5
+SQLAlchemy==1.2.19
 chatterbot==1.0.5
 chatterbot-corpus==1.2.0
-SQLAlchemy==1.3.24
 nltk==3.6.7
-pytest
+pytest==7.4.4
+pytest-asyncio==0.21.2
+spacy==2.1.9
+pymongo==3.13.0
+pint==0.18
+PyYAML==3.13
+python-dateutil==2.7.5
+numpy==1.21.6
