--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
-Flask==2.3.2
-chatterbot==1.0.5
-chatterbot_corpus==1.2.0
-SQLAlchemy==1.4.49
+Flask==2.2.5
 cachetools==5.3.1
-nest_asyncio==1.5.8
+SQLAlchemy==1.3.24
+chatterbot==1.0.5
+chatterbot-corpus==1.2.0
+nltk==3.6.7
+pymongo==3.13.0
+pint==0.18
+PyYAML==5.1.2
+python-dateutil==2.7.5
+nest_asyncio==1.5.6
