--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,10 @@ Flask==2.2.5
 cachetools==5.3.1
 SQLAlchemy==1.2.19
 chatterbot==1.0.5
+chatterbot-corpus==1.1.1
 nltk==3.6.7
 pymongo==3.13.0
 pint==0.18
-PyYAML==5.1
+PyYAML==5.1.1
 python-dateutil==2.7.5
 nest_asyncio==1.5.6
